@@ -1,4 +1,5 @@
 3.0.15
+ * More fixes to the TokenAllocator (CASSANDRA-12990)
  * Optimize the vnode allocation for single replica per DC (CASSANDRA-12777)
  * Fix timeout in ReplicationAwareTokenAllocatorTest (CASSANDRA-12784)
  * Make randompartitioner work with new vnode allocation (CASSANDRA-12647)
